--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
   font-weight: normal;
   font-style: normal;
 }
+/* =======================================================
+*
+* 	Template Style 
+*
+* ======================================================= */
+body {
   font-family: "Work Sans", Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -97,8 +103,7 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "Bungee Shade";
-  top:60px;
+  font-family: 'Creepster';
 }
 .fh5co-nav a {
   padding: 5px 10px;
@@ -839,7 +844,7 @@ form label {
   margin-bottom: 0px;
   font-size: 100px;
   line-height: 1.5;
-  font-family: "Garmond", "serif";
+  font-family: Garamond, serif;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
